# bloody-raid-modul

./: .gitignore  CMakeLists.txt  README.md  include.sh
bloody-raid-modul/: CMakeLists.txt
bloody-raid-modul/data/sql/db-world/: loot_tables.sql
bloody-raid-modul/mod-emerald-sanctum/: CMakeLists.txt
bloody-raid-modul/mod-emerald-sanctum/sql/world/: 01_instance_emerald_sanctum.sql  04_spawns.sql  06_gameobject_door.sql
bloody-raid-modul/mod-emerald-sanctum/src/: CMakeLists.txt  instance_smaragdsanktum.cpp  npc_emerald_keeper.cpp
bloody-raid-modul/src/: instance_smaragdsanktum.cpp
conf/: alice.conf.dist
data/sql/db-world/: 04_spawns.sql  instance_smaragdsanktum.sql  npc_alice.sql  spells_override.sql  waypoints.sql
mod-emerald-sanctum/: README.md
mod-emerald-sanctum/conf/: mod_emerald_sanctum.conf.dist
mod-emerald-sanctum/sql/world/: 02_creature_template.sql  03_creature_text.sql
mod-emerald-sanctum/src/: boss_alice_the_dreammother.cpp  emerald_sanctum.h
src/: CMakeLists.txt  MP_loader.cpp  alice.h  boss_alice.cpp  instance_smaragdsanktum.cpp  mod_loader.cpp  npc_alice_start.cpp
